--- a/build-dev/main.html
+++ b/build-dev/main.html
@@ -128,16 +128,24 @@
           </li>
         </ul>
       </nav>
-      <div class="test">
-        <a href="#" class="header__lk-link js-lk-btn" aria-describedby="tooltip">
-          <span class="header__lk-icon"><svg><use xlink:href="assets/sprite.svg#lock"></use></svg></span>
-          <span class="header__lk-text">Личный кабинет</span>
-        </a>
-        <div class="tooltip js-lk-tooltip" role="tooltip">
-          Личный кабинет скоро появится
-          <div class="tooltip__arrow" data-popper-arrow></div>
-        </div>
+
+      <a href="#" class="header__lk-link js-lk-btn" aria-describedby="tooltip">
+        <span class="header__lk-icon"><svg><use xlink:href="assets/sprite.svg#lock"></use></svg></span>
+        <span class="header__lk-text">Личный кабинет</span>
+      </a>
+      <div class="tooltip js-lk-tooltip" role="tooltip">
+        Личный кабинет скоро появится
+        <div class="tooltip__arrow" data-popper-arrow></div>
       </div>
+      <button class="header__menu-toggle js-menu-toggle" type="button">
+        <svg class="header__menu-open">
+          <use xlink:href="assets/sprite.svg#menu-open"></use>
+        </svg>
+        <svg class="header__menu-close">
+          <use xlink:href="assets/sprite.svg#close"></use>
+        </svg>
+      </button>
+
     </header>
 
     <main class="site-content">
@@ -197,25 +205,30 @@
               <h3 class="mission__subtitle">О&nbsp;компании</h3>
               <h2 class="misson__title title">Наша миссия</h2>
             </div>
-            <ul class="mission__list">
-              <li class="mission__item" data-order="1">
-                <h3 class="mission__item-title">Цель</h3>
-                <p class="mission__item-desc">Создание закрытой экосистемы (комплекса взаимоотношений между заказчиками и&nbsp;исполнителями в&nbsp;защищенной сети обмена информацией) поддержки предприятий ОПК.</p>
-              </li>
-              <li class="mission__item" data-order="2">
-                <h3 class="mission__item-title">Задача</h3>
-                <p class="mission__item-desc">Формирование комплексного подхода к&nbsp;анализу, мониторингу и&nbsp;обеспечению информационной и&nbsp;финансовой поддержки участников отношений, в&nbsp;том числе в&nbsp;рамках исполнения государственного оборонного заказа (ГОЗ)</p>
-              </li>
-              <li class="mission__item" data-order="3">
-                <h3 class="mission__item-title">Реализация</h3>
-                <p class="mission__item-desc">Создание закрытой экосистемы сервисов для заказчиков услуг посредством использования защищенной сети АСТ ГОЗ и&nbsp;инструментов специализированной организации.</p>
-              </li>
-            </ul>
+            <div class="splide js-slider" data-name="mission">
+              <div class="splide__track">
+                <ul class="mission__list splide__list">
+                  <li class="mission__item splide__slide" data-order="1">
+                    <h3 class="mission__item-title">Цель</h3>
+                    <p class="mission__item-desc">Создание закрытой экосистемы (комплекса взаимоотношений между заказчиками и&nbsp;исполнителями в&nbsp;защищенной сети обмена информацией) поддержки предприятий ОПК.</p>
+                  </li>
+                  <li class="mission__item splide__slide" data-order="2">
+                    <h3 class="mission__item-title">Задача</h3>
+                    <p class="mission__item-desc">Формирование комплексного подхода к&nbsp;анализу, мониторингу и&nbsp;обеспечению информационной и&nbsp;финансовой поддержки участников отношений, в&nbsp;том числе в&nbsp;рамках исполнения государственного оборонного заказа (ГОЗ)</p>
+                  </li>
+                  <li class="mission__item splide__slide" data-order="3">
+                    <h3 class="mission__item-title">Реализация</h3>
+                    <p class="mission__item-desc">Создание закрытой экосистемы сервисов для заказчиков услуг посредством использования защищенной сети АСТ ГОЗ и&nbsp;инструментов специализированной организации.</p>
+                  </li>
+                </ul>
+
+              </div>
+            </div>
           </div>
         </div>
       </section>
 
-      <section class="fin-products">
+      <section class="fin-products section">
         <div class="container">
           <h2 class="fin-products__title title">Финансовые продукты</h2>
           <ul class="fin-products__list">
@@ -279,7 +292,7 @@
         </div>
       </section>
 
-      <section class="purchase-service">
+      <section class="purchase-service section">
         <div class="container">
           <div class="purchase-service__title-wrap">
             <h2 class="purchase-service__title title">Услуги в&nbsp;сфере закупок</h2>
